# ROAK-sdk

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  open-documentation.cmd  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs-pages.yml
Redunant/: test Task1.md  test Task2.md  test Task3.md
Redunant/userguide_tests/: feedstest.py  userguide_test1.py  userguide_test2.py  userguide_test3.py
docs/: Software_Guide_Book.md  UserGuide.md  getting_started.md
docs/internal_documentation/: architecture.md  first_users.md  flows.md  internal_go_live_checklist.md  missing_methods_analysis.md  production_readiness_checklist.md  roak_project_gap_analysis.md
docs/sphinx/: conf.py  getting_started.md  index.rst
docs/sphinx/api/: borehole.rst  errors.rst  modem.rst  project.rst  rig.rst  roak.rst  site.rst  well.rst
scenarios/: count_customer_wells_scenario.py  get_data_through_modem_scenario.py  get_rig_data_scenario.py  get_well_data_scenario.py  multi_tenant_scenario.py  site_well_data_scenario.py
src/roak_sdk/: __init__.py  __main__.py  auth.py  config.py  roak.py  roak_error.py  time_helper.py
src/roak_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/roak_sdk/clients/: asset_client.py  (+10 more)
tests/: TEST_PLAN.md  __init__.py  conftest.py
tests/integration/: test_rig_data_integration.py  test_scenarios_integration.py  test_well_data_integration.py
tests/unit/: test_auth.py  test_get_all_assets_per_type.py  test_get_assets_base.py  test_get_depth_data.py  test_get_rig_data.py  test_import.py  test_roak.py  test_time_helper.py
(+40 files in other folders)
